part 4 in place

--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -31,7 +31,7 @@ There are some steps to follow to get where we need to go, so we will do this in
 3. [Streaming implementations of worst-case optimal join processing on static data.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#3-streaming-data-parallel-on-static-data)
 	i. 
 4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
-5. [Evaluating this; show me some numbers!]()
+5. [Discussion, cool things!]()
 
 I'm going to use the [`livejournal`](http://snap.stanford.edu/data/soc-LiveJournal1.html) graph dataset for most of the experiments, so if you want to grab that and follow along, sweet. I'll also report some statistics for the [`twitter_rv`](https://an.kaist.ac.kr/~hosung/papers/2010-www-twitter.pdf) graph dataset, though mainly to demonstrate the asymptotic difference between various algorithms, as it is just too painful to run the slower algorithms on this larger (and more skewed) dataset.
 
@@ -888,4 +888,410 @@ The good news is that there are stream processors. [Apache Flink](https://flink.
 
 ## 4. Streaming, data-parallel on dynamic data.
 
-## 5. Evaluating this.
+And now, on to the main event: tracking motifs in a changing graph. 
+
+Specifically, we are going to tackle the question:
+
+> Given an initial graph and a sequence of sets of edge changes (additions, deletions), what is the corresponding sequence of sets of changes (additions, deletions) in the instances of a given motif in the graph?
+
+Rather than wax philosophical about this, let's just look at the answer. 
+
+### Delta-queries
+
+In the relational database world, folks update relational joins in response to changes in their inputs by forming the "delta query": the relational join describing changes in the output relation in terms of a query over the input relations, and the relation containing the changes.
+
+Recall the triangles query, which we write
+
+	triangles(x0, x1, x2) := edges(x0, x1), edges(x0, x2), edges(x1, x2)
+
+Imagine for the moment that we've rewritten this using three different relation names, each of which will eventually be instantiated as `edges`:
+
+	triangles(x0, x1, x2) := A(x0, x1), B(x0, x2), C(x1, x2)
+
+Why do this? We can now examine the change in the output relation `triangles` as a function of each of the relations `A`, `B`, and `C` independently. For example, if relation `A` changes, perhaps by the tuples in a relation `dA`, the change to `triangles` equals
+
+	dTdA(x0, x1, x2) := dA(x0, x1), B(x0, x2), C(x1, x2)
+
+How did we determine this? Just by using the distributive property of the relational algebra.
+
+	  (A + dA) x B x C
+	= (A x B x C) + (dA x B x C)
+
+Amazing. We can do the same thing with `B` and `C`, forming delta queries 
+
+	dTdB(x0, x1, x2) := A(x0, x1), dB(x0, x2), C(x1, x2)
+	dTdC(x0, x1, x2) := A(x0, x1), B(x0, x2), dC(x1, x2)
+
+Now any changes to the input relations can be resolved by computing first `dTdA` then `dTdB` then `dTdC`.
+
+**Important**: In the case of graph motifs `A`, `B`, and `C` are all instantiated by the same relation, `edges`, and so they always receive updates at the same time. For the delta queries to be correct, we must imagine the relations `A`, `B`, `C` to be updated in sequence, and use the old value of `B` in `dTdA` and the new value of `B` in `dTdC`. 
+
+Alternately, we could perform simultaneous updates and correct with the higher-order terms `dA x dB`, `dA x dC`, `dB x dC`, `dA x dB x dC`, but in more general motifs this ends up with an exponential increase in the number of terms. We will stick with the multi-versioned approach here.
+
+### Are we done? Streaming redux.
+
+We now have queries describing the quantities we require (changes in triangles as a function of changes in the inputs). We can generalize these delta-queries to arbitrary motifs. We also have all this great pre-existing "worst-case optimal" join infrastructure. Can we just apply this infrastructure to our queries and announce success? Unfortunately, no.
+
+The existing worst-case optimal join techniques permit pre-processing time linear in the size of the input relations. This makes sense if you are doing just one join query, because you might expect to need to read each tuple at least once. In our case the inputs to the delta query are a mix of small and large: `dA` is small but `B` and `C` may be large. We do not want to pay |`A`| + |`B`| + |`C`| for each update to the relations. We would much rather have a bound that looks like |`dA`| + |`dB`| + |`dC`|, plus the worst-case optimal "largest number of output tuples that could possibly be produced" term.
+
+So we need to try a little harder. 
+
+The good news is that, based on the framework we've written so far, we just need to *look* a little harder. It mostly does the right things already. Other implementations of worst-case join computation may also mostly do the right things already, so the point is more that we need to pay attention to the details, not so much that we must actively reject other approaches (ideally they will tell us if their infrastructure accommodates this approach).
+
+### Looking harder
+
+Recall how we perform triangle computation (and motifs generally) in dataflow: we start from a stream of initial `(x0, x1)` bindings, and for each binding consider how to extend each of the attributes `x2`, `x3`, .. in turn. 
+
+Each `(x0, x1)` pair we introduce produces all output bindings that derive from the `(x0, x1)` pair. It is, in essence, computing the delta query for the `edges(x0, x1)` relation. However, it is computing this delta query only for this first relation, and with all other relations (e.g. `edges(x0, x2)` and `edges(x1, x2)`) fully loaded. If for each batch `dA_t` of `(x0, x1)` pairs the dataflow used intermediate relations `forward_t` and `reverse_t`, rather than static indices `forward` and `reverse`, it would compute
+
+	dTdA_t(x0, x1, x2) := dA_t(x0, x1), B_t(x0, x2), C_t(x1, x2)
+
+Our implementation is already very nearly the delta-query processor that performs work linear in the input differences and worst-case output differences. We just need to generalize it to work against dynamic relations, to reflect the fact that we do not have the final relations for `B` and `C` (nor `A`) at hand, and make sure that it works for each of the delta queries.
+
+### Fixing things up
+
+The main change we must perform is to support our dataflow operations `count`, `propose`, and `intersect` against a dynamically changing index. Moreover, to get correct answers out we will want the index to go through well defined versions that we can query against, rather than some asynchronously updated mess.
+
+Fortunately, timely dataflow is awesome at maintaining an explicit understanding of time in a dataflow graph. Each circulated tuple has a logical timestamp, and each of our `count`, `propose`, and `intersect` operators can use this timestamp to look at the "right version" of the `forward` and `reverse` indices. We must still say a bit about how we write a multi-version graph index, but it isn't fundamentally complicated (we only need to do a few things well). The most important features are that timely dataflow is explicit about (i) which version of the index a record requires, and (ii) when no further records will require some version (allowing index compaction).
+
+### From the top, with more detail
+
+To sketch our plan in a bit more detail, for a query
+
+	Q(x0, x1, ..) := A(x0, x1), .. R(xi, xj), ..
+
+we 
+
+1. Impose an arbitrary ordering on the input relations. Let's just take them in the order they are presented. Our computation will produce deltas as if the relations were updated in this order. The relations may name the same underlying source of data, e.g. `edges`, and we will need to make sure the updates happen in a sequence, rather than all at once.
+2. For each relation `R`, determine dataflow graph for `dQdR` starting from pairs `(xi, xj)` in `dR`. This dataflow graph must use the "new" version of indices for relations `A` preceding `R`, and the "old" version of indices for relations following `R`. This gives us the result we would get from updating the relations in sequence, even though some of the indices may be shared and so not be in an "old" or "new" state.
+3. Update our implementations of `count`, `propose`, and `intersect` to be mindful of times, both waiting until an index contains all updates for a time, and then interrogating the index with that time as an explicit argument.
+
+Here is the update code for the `count` method, which takes mainly a stream of tuples containing the triple `(prefix, count, index)` as before, with a fourth `i32` field indicating change (e.g. `+2` or `-1` in addition to the implicit `+1` from before), and updates each tuple if the index it uses would propose fewer extensions for the prefix. The binary operator has a second input, which comes as an output from the index it uses; the operator uses the "progress" on this input to know whether the index has processed all of its updates for a given `time` and is ready to report correct counts for that time.
+
+```rust
+fn count(&self, prefixes: Stream<G, (Self::Prefix, u64, u64, i32)>, ident: u64) 
+-> Stream<G, (Self::Prefix, u64, u64, i32)> {
+    
+    let clone = self.helper.clone();
+    let logic = self.helper.logic();
+    let exch = Exchange::new(move |&(ref x,_,_,_)| (*logic)(x));
+
+    let mut blocked = vec![];
+
+    prefixes.binary_notify(&self.stream, exch, Pipeline, "Count", vec![], 
+        move |input1, input2, output, notificator| {
+
+        // The logic in this operator should only be applied to data inputs at `time` once we are 
+        // certain that the second input has also advanced to `time`. The shared index `clone` is
+        // only guaranteed to be up to date once that has happened. So, if we receive data inputs
+        // for a time that has not also been achieved in the other input, we must delay the input.
+        //
+        // The same structure applies to `propose` and `intersect`, so these comments apply there too.
+
+        // stash all (time, data) pairs into a temporary list, ignore data in the second input.
+        input1.for_each(|time, data| blocked.push((time, data.take())));
+        input2.for_each(|_,_| {});
+
+        // scan each stashed element and see if it is time to process it.
+		for &mut (ref time, ref mut data) in &mut blocked {
+
+            // ok to process if no further updates less or equal to `time` on the second input.
+			if !notificator.frontier(1).iter().any(|t| t.le(&time.time())) {
+
+                // pop the data out of the list; we'll clean up the entry later.
+                let mut data = data.take();
+                (*clone).count(&mut data, &time.time(), ident);
+                data.retain(|x| x.1 > 0);
+
+                output.session(time).give_content(&mut data);
+			}
+		}
+
+        // discard any data we processed up above.
+        blocked.retain(|&(_, ref data)| data.len() > 0);
+	})
+}
+```
+
+This code block mostly does what it says, holding back blocks of data until their indicated time is ready for the index. Not shown is the code that maintains an index, which both pretends that it might send data for any incomplete time (as a warning to its consumers) and which awaits information about who still needs access to different versions so that it can compact its representation as appropriate.
+
+The other operators are similar in spirit, but each do a few clever things. We will get back to them and their cleverness once we've explained the higher level points.
+
+### Multiversion graph indices
+
+You could make this arbitrarily complicated, but we didn't. It seems to work fine.
+
+```rust
+pub struct Index<T> {
+    edges: Vec<EdgeList>,
+    diffs: Vec<(u32, u32, T, i32)>,
+    peers: usize,
+}
+```
+
+Our multi-version index keeps in `edges` for each node a list of "committed" updates that everyone should use (those with timestamp less than those of all in-flight tuples), and a list `diffs` of outstanding diffs that may be interesting depending on what timestamp you are interested in. It also tracks the number `peers` of other workers so that it knows what it should div indices by to densely index into `edges`. We could just have a `HashMap` instead, but we don't.
+
+The entries of `diffs` are just `(src, dst, time, delta)`, and are maintained sorted in that order. If you want to know something about `src`, we look up `self.edges[src]` and do a binary search into `self.diffs`. 
+
+The `EdgeList` struct contains the committed per-node state (neighbors) and looks like
+
+```rust
+struct EdgeList {
+    pub edge_list: Vec<(u32, i32)>,
+    pub elsewhere: u32,
+    pub effort: u32,
+}
+```
+
+The `edge_list` field keeps `(dst, delta)` updates in an at-most-logarithmic number of sorted ranges, concatenated, so that we can both quickly (i) do things like intersection testing (at most a logarithmic number of look-ups), and (ii) add few elements with low amortized overhead. The `elsewhere` field just tracks the number of diffs in `diffs` so that we can skip the search for something like `count`, which we do a lot. The `effort` field tracks the amount of work we have done with the entry, and once this gets large we may start merging the `edge_list` sorted ranges to simplify their representation.
+
+New updates land in the `diffs` field of the index, and as times are determined to be complete get migrated to the end of the corresponding `edges[src].edge_list` sorted ranges. If there are enough updates we may merge some of the sorted ranges.
+
+Generally speaking, all of the data for a node is found in at most two places: the corresponding `edge_list` array or in a contiguous section of the sorted `diffs` field of the index. All of the data for a `(src, dst)` pair is in at most a number of places logarithmic in the degree of `src`, which allows for relatively brisk intersection testing, especially against batches of candidates.
+
+#### Overhead
+
+The memory overhead for this representation initially worried me, but it seems not horrible. If we load up the graph in batches of one thousand nodes at a time, the `livejournal` graph ends up taking around 2.19GB (the process ends up at this in stable state). The graph has about 69 million edges, which means just about 32 bytes for each edge. This can be accounted as 
+
+1. We use 4 bytes to represent the destination.
+2. We use an additional 4 bytes to represent the change in count.
+3. We index the graph twice (once in each direction).
+
+This would give us 16 bytes per edge, and so we have about 2x lost due to slop: things like 24 bytes for each `Vec` not counting the data, allocations being bigger than we needed, fields used to describe the boundaries of the sorted ranges. We could certainly compact this, for example by observing that the largest oldest sorted range for each `edge_list` doesn't require counts (each entry should be a positive accumulation of weights). We could do even more, and you are totally welcome to try out other strategies and send some pull requests once the code is out.
+
+### Trying it out
+
+I've taken the `livejournal` graph and permuted its edges randomly. We will load up some fraction (most) of the edges, and then add the remaining edges in batches of various sizes. The `twitter_rv` graph would be fun to play with, but with our overhead it clocks in at about 2x my laptop's memory. We will get you numbers using a larger machine.
+
+There are 68,993,773 edges in the directed `livejournal` graph that I have. We will first load up the first 68,000,000 of these, in batches of 1,000,000 edges. We will then walk through the remaining edges as updates, in batches of 1,000. We should get about 994 lines of output indicating the numbers of new instances of the motifs.
+
+#### Directed triangles
+
+Let's start with the directed triangles query we have used so far.
+
+	Echidnatron% cargo run --release --example motif -- 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect
+	     Running `target/release/examples/motif 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect`
+	motif:	[(0, 1), (0, 2), (1, 2)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 63, nanos: 399875208 }	[worker 0]	data loaded
+	Duration { secs: 63, nanos: 399912670 }	[worker 0]	indices merged
+	(Root, 70): [37695]
+	(Root, 71): [36745]
+	(Root, 72): [42000]
+	(Root, 73): [37232]
+	(Root, 74): [43110]
+	(Root, 75): [37599]
+	...
+	(Root, 1061): [37462]
+	(Root, 1062): [44505]
+	(Root, 1063): [30189]
+	elapsed: 86.67318760592025	total motifs at this process: 39772836
+	Echidnatron%
+
+So, it takes 63 seconds to load up the first 68,000,000 edges, presented in random order. This includes parsing stuff from text, sorting using Rust's `sort`, and likely several other inefficiencies. It is a little over one million edges per second, which isn't great but works for now.
+
+Once we get started, it takes 23 seconds to process the remaining nearly one million edges, in batches of one thousand edges at a time. This means about 23 milliseconds per batch, and about 1.7 million observed directed triangles per second.
+
+Of course, this is just one thread. Let's try two.
+
+	Echidnatron% cargo run --release --example motif -- 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect -w2
+	     Running `target/release/examples/motif 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect -w2`
+	motif:	[(0, 1), (0, 2), (1, 2)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	motif:	[(0, 1), (0, 2), (1, 2)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 35, nanos: 540201480 }	[worker 0]	data loaded
+	Duration { secs: 35, nanos: 540201433 }	[worker 1]	data loaded
+	Duration { secs: 35, nanos: 540309928 }	[worker 1]	indices merged
+	Duration { secs: 35, nanos: 540321775 }	[worker 0]	indices merged
+	(Root, 70): [16492]
+	(Root, 70): [21203]
+	(Root, 71): [16693]
+	(Root, 71): [20052]
+	(Root, 72): [19135]
+	(Root, 72): [22865]
+	(Root, 73): [17004]
+	(Root, 73): [20228]
+	...
+	(Root, 1061): [17022]
+	(Root, 1061): [20440]
+	(Root, 1062): [22421]
+	(Root, 1062): [22084]
+	(Root, 1063): [13953]
+	(Root, 1063): [16236]
+	elapsed: 51.03766422404442	total motifs at this process: 39772836
+	Echidnatron%
+
+The loading time has dropped from 63 seconds to 35 seconds, and the update processing time has dropped from 23 seconds to 16 seconds.
+
+It turns out that a fair hunk of this time is in the counting up of motifs. If we ditch the `inspect` argument, which detatches the code that counts all the updates, we get improvements like
+
+	Echidnatron% cargo run --release --example motif -- 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000
+	     Running `target/release/examples/motif 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000`
+	...
+	elapsed: 80.91951578599401	total motifs at this process: 0
+	Echidnatron%
+
+and
+
+	Echidnatron% cargo run --release --example motif -- 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 -w2
+	     Running `target/release/examples/motif 3 0 1 0 2 1 2 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 -w2`
+	...
+	elapsed: 45.1404357770225	total motifs at this process: 0
+	Echidnatron%
+
+The loading times have stayed the same, but the update processing has dropped from 23 seconds to 17 seconds for one thread, and from 16 seconds to 10 seconds for two threads. That brings us to about 100,000 edge updates per second, and four million observed motifs per second.
+
+#### Directed four-cliques
+
+Let's move on to a slightly more interesting motif, a directed four clique. Recall that we write this motif like so:
+
+	quads(x0, x1, x2) := edges(x0, x1), edges(x0, x2), edges(x0, x3), 
+	                     edges(x1, x2), edges(x1, x3), edges(x2, x3)
+
+This is likely going to produce more results than `triangles`, but let's just run it and see
+
+	Echidnatron% cargo run --release --example motif -- 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect
+	     Running `target/release/examples/motif 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68000000 1000000 1000 inspect`
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 66, nanos: 146885879 }	[worker 0]	data loaded
+	Duration { secs: 66, nanos: 146974141 }	[worker 0]	indices merged
+	(Root, 70): [5467256]
+	...
+	(Root, 1063): [3938957]
+	elapsed: 1899.4709296720102	total motifs at this process: 5676359086
+	Echidnatron%
+
+Gaaah... that took forever. Like, half an hour. We can conclude that the rate at which we can process edge updates depends on the complexity of the query; we managed about 525 edges per second, compared with 100x that for triangles.
+
+On the other hand, we did produce 5,676,359,086 motif instances, at a rate of about 3 million per second. That is an improvement on the number for the corresponding triangle experiment (about 1.7 million per second).
+
+In the interest of showing you a variety of numbers, let's change the experiment so that we load 68,900,000 edges and then process the remaining 90,000-ish as updates, a 10x reduction in the number of updates.
+
+	Echidnatron% cargo run --release --example motif -- 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect
+	     Running `target/release/examples/motif 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect`
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 63, nanos: 652378537 }	[worker 0]	data loaded
+	Duration { secs: 64, nanos: 82679176 }	[worker 0]	indices merged
+	(Root, 70): [6239159]
+	...
+	(Root, 163): [3938957]
+	elapsed: 247.77742787706666	total motifs at this process: 550759817
+	Echidnatron%
+
+Ok, this was much more manageable. We produced again about 3 million motifs per second, once the graph was loaded. 
+
+With two workers we get:
+
+	Echidnatron% cargo run --release --example motif -- 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect -w2
+	     Running `target/release/examples/motif 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect -w2`
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 36, nanos: 6450156 }	[worker 1]	data loaded
+	Duration { secs: 36, nanos: 6456809 }	[worker 0]	data loaded
+	Duration { secs: 36, nanos: 241080660 }	[worker 1]	indices merged
+	Duration { secs: 36, nanos: 241102454 }	[worker 0]	indices merged
+	(Root, 70): [2912750]
+	(Root, 70): [3326409]
+	...
+	(Root, 163): [2405342]
+	(Root, 163): [1533615]
+	elapsed: 139.3537110920297	total motifs at this process: 550759817
+
+which is the usual reduction in graph loading, and then a reduction from 183 seconds of update processing to 103 seconds. If we scotch the `inspect` counting and printing we see for one thread
+
+	Echidnatron% cargo run --release --example motif -- 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000
+	     Running `target/release/examples/motif 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000`
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 63, nanos: 975649581 }	[worker 0]	data loaded
+	Duration { secs: 64, nanos: 410750017 }	[worker 0]	indices merged
+	elapsed: 197.72248245810624	total motifs at this process: 0
+	Echidnatron%
+
+and for two threads
+
+	Echidnatron% cargo run --release --example motif -- 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 -w2
+	     Running `target/release/examples/motif 6 0 1 0 2 0 3 1 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 -w2`
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	motif:	[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 36, nanos: 71786237 }	[worker 1]	data loaded
+	Duration { secs: 36, nanos: 71718054 }	[worker 0]	data loaded
+	Duration { secs: 36, nanos: 287560833 }	[worker 1]	indices merged
+	Duration { secs: 36, nanos: 287496086 }	[worker 0]	indices merged
+	elapsed: 117.44219726102892	total motifs at this process: 0
+	Echidnatron%
+
+We do see a fairly decent reduction from not counting the motifs, due to not slogging around so much data. For two threads, we end up processing just over 1,000 updates per second, and enumerating roughly 6.7 million motifs per second.
+
+#### Twitter doo-dads
+
+There is a recent twitter paper where they are interested in recommending content based on the graph structure of ... engagement? likes? Something. They have a graph that evolves and a query that look like
+
+	rec(x0, x1, x2, x3) := edge(x0, x1), edge(x0, x2), edge(x1, x3), edge(x2, x3)
+
+roughly this is a diamond, from `x0` to both `x1` and `x2`, and from each of them to `x3`. This is a good indicator that we should tell `x0` about `x3`. 
+
+We can totally write down this motif, but notice that every directed four-clique is an instance of this motif, so we are going to produce at least as many outputs. We might produce a lot more. 
+
+	Echidnatron% cargo run --release --example motif -- 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect
+	     Running `target/release/examples/motif 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 inspect`
+	motif:	[(0, 1), (0, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 63, nanos: 831294181 }	[worker 0]	data loaded
+	Duration { secs: 64, nanos: 258243081 }	[worker 0]	indices merged
+	(Root, 70): [7430177]
+	...
+	(Root, 163): [4758367]
+	elapsed: 342.3828599349363	total motifs at this process: 652802206
+	Echidnatron%
+
+Hrm. Not that many more (the total number of four-cliques for the same parameters was 550,759,817). However, the running time did go up by a bit (from 247.7 seconds). The computations are pretty similar, except at each extension we have fewer restrictions we get to apply, likely just resulting in larger candidate sets. We could go and measure the details to try and find out, which might be a smart thing to do in the future.
+
+Let's grab some numbers for multiple threads, and without the counting / printing overhead. Here is one thread without counting, printing:
+
+	Echidnatron% cargo run --release --example motif -- 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000
+	     Running `target/release/examples/motif 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000`
+	motif:	[(0, 1), (0, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 64, nanos: 146720869 }	[worker 0]	data loaded
+	Duration { secs: 64, nanos: 573365193 }	[worker 0]	indices merged
+	elapsed: 284.03139675501734	total motifs at this process: 0
+	Echidnatron%
+
+And two threads without counting, printing:
+
+	Echidnatron% cargo run --release --example motif -- 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 -w2
+	     Running `target/release/examples/motif 4 0 1 0 2 1 3 2 3 ./soc-LiveJournal1.random.txt 68900000 1000000 1000 -w2`
+	motif:	[(0, 1), (0, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	motif:	[(0, 1), (0, 2), (1, 3), (2, 3)]
+	filename:	"./soc-LiveJournal1.random.txt"
+	Duration { secs: 36, nanos: 135581789 }	[worker 1]	data loaded
+	Duration { secs: 36, nanos: 135566269 }	[worker 0]	data loaded
+	Duration { secs: 36, nanos: 377814133 }	[worker 0]	indices merged
+	Duration { secs: 36, nanos: 377841251 }	[worker 1]	indices merged
+	elapsed: 158.41133950592484	total motifs at this process: 0
+	Echidnatron%
+
+Well, those times sure are exciting. Of course, we've computed totally the wrong thing, I think.
+
+#### Oh geez. Now what?
+
+The Twitter computation has a few other constraints that we ignored when we wrote down the motif. For example, we probably only want tuples where the elements are all distinct; having `x0 == x3` would be cheating. Having `x1 == x2` is even more obviously broken. We probably also want `x0` and `x3` that are not already connected, right? 
+
+The good news is that these sorts of constraints can be easily integrated into our dataflow. 
+
+1. The "distinctness" constraint is a per-tuple filter, and we can just apply this filter after each extension. 
+
+2. The "non-presence" requirement is nearly identical to the presence requirement: we go and look things up in an adjacency list and make a decision based on what we find. In fact, we could present it as an `intersect` implementation if we wanted (though we cannot use this constraint to count or propose extensions).
+
+These are relatively easy conceptual changes, though they require a bit of tap-dancing with the code. They are important to support, because they can make the computations much more efficient. For example, we could add the constraint `x1 < x2` to the Twitter query, and remove duplicates of the same motif (each would otherwise be present twice, with `x1` and `x2` swapped). Similar tricks show up when looking for motifs in undirected graphs, where 
+
+## 5. Discussion, cool things!
