part 4 in place

--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -28,9 +28,8 @@ There are some steps to follow to get where we need to go, so we will do this in
 
 1. [Motifs in graphs. What are they, and how might we compute them?](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#1-motifs-in-graphs)
 2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#2-worst-case-optimal-relational-joins)
-3. [Streaming implementations of worst-case optimal join processing on static data.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#3-streaming-data-parallel-on-static-data)
-	i. 
-4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
+3. [Streaming implementations of worst-case optimal join processing on static data.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#3-streaming-data-parallel-on-static-data).
+4. [Streaming implementations of worst-case optimal join processing on dynamic data.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#4-streaming-data-parallel-on-dynamic-data)
 5. [Discussion, cool things!]()
 
 I'm going to use the [`livejournal`](http://snap.stanford.edu/data/soc-LiveJournal1.html) graph dataset for most of the experiments, so if you want to grab that and follow along, sweet. I'll also report some statistics for the [`twitter_rv`](https://an.kaist.ac.kr/~hosung/papers/2010-www-twitter.pdf) graph dataset, though mainly to demonstrate the asymptotic difference between various algorithms, as it is just too painful to run the slower algorithms on this larger (and more skewed) dataset.
