--- a/posts/2014-12-15.md
+++ b/posts/2014-12-15.md
@@ -113,7 +113,7 @@ This approach to vector columnarization steers us clear of the traditional hazar
 
 ## Performance ##
 
-Measuring the performance of columnarization in Rust turned out to be harder than I expected. Mostly, coming from a managed JIT background, one could reasonably believe that only effect of an optimizing compiler was to randomize line numbers. Rust and LLVM are a fair bit smarter and without the right test harness they wil just optimize away your program.
+Measuring the performance of columnarization in Rust turned out to be harder than I expected. Mostly, coming from a managed JIT background, one could reasonably believe that only effect of an optimizing compiler was to randomize line numbers. Rust and LLVM are a fair bit smarter and without the right test harness they will just optimize away your program.
 
 The harness is in [example.rs](https://github.com/frankmcsherry/columnar/blob/master/examples/example.rs), and tests out columnar encoding and decoding of a few different datatypes. Be warned that these numbers are likely optimistic, as fewer optimizations will apply in the wild.
 
