--- a/posts/2014-12-16.md
+++ b/posts/2014-12-16.md
@@ -46,7 +46,7 @@ This all works, as far as I can see. Everything checks out, except...  back in `
 
 Up until this point, there was a unique implementation of `ColumnarVec<T>` for each type `T`. This meant that Rust had no problem finding an implementation when I just told it the type `T`. Now we have two implementations for `(uint, uint)`: the implementation we discussed last time based on its pair nature, and a new implementation because `(uint, uint)` implements `Copy`.*
 
-Now, this is not necessarily a huge problem. We have an abundance of implementations, and if you show up with a `Vec<(uint, uint)>` we'll know what to do, and if you show up with a `(Vec<uint>, Vec<uint>)` we'll also know what to do. It's only a problem because we had previously exploited type inference to magic up the type in the first place, so we never even had to mention either of these types. Now we might be stuck asking the user to write down some disasterously complicated type for their columnarizer, because we can't figure out which one they want.
+Now, this is not necessarily a huge problem. We have an abundance of implementations, and if you show up with a `Vec<(uint, uint)>` we'll know what to do, and if you show up with a `(Vec<uint>, Vec<uint>)` we'll also know what to do. It's only a problem because we had previously exploited type inference to magic up the type in the first place, so we never even had to mention either of these types. Now we might be stuck asking the user to write down some disastrously complicated type for their columnarizer, because we can't figure out which one they want.
 
 *: Technically `Copy` is a "kind", not a trait. I don't really know what this means.
 
@@ -66,7 +66,7 @@ Now we just go and implement `Columnar` for as many types as we would like, for 
 impl Columnar<Vec<u8>> for u8 { }
 ```
 
-This just says that `u8` is a type that would prefer to use `Vec<u8>` as its default imlementation of `ColumnarVec<u8>`. Pretty good choice. The other examples are pretty simple too, but they start repurposing `T` and `R` to mean other things, and no one is happy.
+This just says that `u8` is a type that would prefer to use `Vec<u8>` as its default implementation of `ColumnarVec<u8>`. Pretty good choice. The other examples are pretty simple too, but they start repurposing `T` and `R` to mean other things, and no one is happy.
 
 When it comes time to construct a specific `ColumnarVec`, we can rely on the uniqueness of a type `R` satisfying both of the constraints `T: Columnar<R>` *and* `R: ColumnarVec<T>`. Let's see it in action:
 
